argorollout-nodejs/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollouts-nodejs-canary
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: rollouts-demo
    # This selector will be updated with the pod-template-hash of the canary ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 7bf84f9696

---
apiVersion: v1
kind: Service
metadata:
  name: rollouts-nodejs-stable
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
  selector:
    app: rollouts-demo
    # This selector will be updated with the pod-template-hash of the stable ReplicaSet. e.g.:
    # rollouts-pod-template-hash: 789746c88d
